# gpumkat

./: CMakeLists.txt  README.md  gpumkat.h  install.sh  main.m
Example/: config.json  gpu_test_report.html  nvim_lsp_config.lua  simple_shader.metal  test_config.json
include/: gpumkat.h
include/modules/debug/: expose_from_debug.h  expose_to_debug.h
include/modules/lsp_server/: lsp_integration.h  metal_lsp_server.h
include/modules/pipeline_statistics/: pipeline_statistics.h
include/modules/testing/: testing.h
include/modules/visualization/: visualization.h
modules/debug/: debug.m  expose_from_debug.h
modules/lsp_server/: lsp_integration.m  metal_lsp_server.m
modules/memory_tracker/: memory_tracker.m
modules/pipeline_statistics/: pipeline_statistics.h  pipeline_statistics.m
modules/testing/: testing.h  testing.m
modules/update/: update.m
modules/visualization/: visualization.h  visualization.m
